# robotoff

./: .deepsource.toml  .dockerignore  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .spectral.yml  .travis.yml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  MANIFEST.in  Makefile  README.md  SECURITY.md  Untitled.ipynb  Untitled1.ipynb  add_value_tag.py  app.py  apply_insights.py  build_mkdocs.sh  codecov.yml  crowdin.yml  docker-compose.ann.yml  docker-compose.yml  gunicorn.conf  gunicorn.py  import_dump.py  index.html  insights.jsonl  migrate_db.py  mkdocs.yml  models.py  mypy.ini  ocr_labeled_1K.csv  (+14 more)
.github/: dependabot.toto  dependabot.yml  issue-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md
.github/workflows/: README-sdk-notification.md  README.md  api-lint.yml  autoblack.yml  codeql-analysis.yml  container-build.yml  container-deploy-ml.yml  container-deploy.yml  container-reload-ml.yml  crowdin.yml  generate-docs.yml  github-projects.yml  label.yml  models-deploy.yml  notify-sdk-api-changes.yml  pull_request.yml  pypi.yml  quality_check.yml  release-please.yml  robotoff-ann-build.yml  robotoff-ann-deploy.yml  robotoff-build.yml  robotoff-deploy.yml  robotoff.yml  semantic-pr.yml  sonarcloud.yml  tfmodels-sync.yml  top-issues.yml
batch/spellcheck/: Dockerfile  README.md  job.py  main.py  requirements.txt
data/: brand_prefix.json  clf_category_blacklist.txt  label_logos.json
data/grammars/: packaging_fr.lark  terminal_allergen_de.lark  terminal_allergen_en.lark  terminal_allergen_en_map.json  terminal_allergen_es.lark  terminal_allergen_es_map.json  terminal_allergen_fr.lark  terminal_allergen_fr_map.json  terminal_packaging_material_fr.lark  terminal_packaging_material_fr_map.json  terminal_packaging_recycling_fr.lark  terminal_packaging_recycling_fr_map.json  terminal_packaging_shape_fr.lark  terminal_packaging_shape_fr_map.json  traces.lark
data/ocr/: USDA_code_flashtext.txt  brand.txt  brand_from_taxonomy.txt  brand_logo_annotation.txt  brand_taxonomy_blacklist.txt  fishing_flashtext.txt  fishing_zones_flashtext.txt  image_flag_beauty.txt  image_flag_miscellaneous.txt  label_flashtext.txt  label_logo_annotation.txt  label_whitelist.txt  logo_annotation_brands.txt  logo_annotation_labels.txt  logo_annotation_packagings.txt  logo_annotations_brands.txt  notify_stores.txt  notify_whitelist_brands.txt  packaging.txt  regex_brands.txt  regex_packaging.txt  regex_stores.txt  rgseaa-flashtext.txt  store_regex.txt  taxonomy_brands_blacklist.txt  trace_allergen.txt
data/spellcheck/: patterns_fr.txt
data/taxonomies/: brands.full.json  brands_at_least_50.json  brands_whitelist.json  categories.full.json  categories.json  countries.json  ingredients.full.json  ingredients.json  ingredients_fr.txt  ingredients_tokens.txt  labels.full.json  labels.json
deploy/: download-nutriscore.sh
doc/: .pages  README.md  api.md  api.yml  maintenance.md  questions.md  quickstart.md
doc/explanations/: category-prediction.md  interactions-product-opener.md  predictions.md  questions.md  testing-and-debugging.md  triton.md
doc/guidelines/: nutrition-tables-annotation-guidelines.md
doc/how-to-guides/: add-predictor.md  robotoff-for-3rd-party-apps.md  test-and-debug.md
doc/introduction/: architecture.md  contributing.md  notifications.md
doc/references/: adding_new_insight.md  api.md  api.yml  batch-job.md  ingredients-spellcheck.md  logos-ANN.md  models.md  package.md
doc/research/: index.md
docker/: dev.yaml  dev.yml  docker-entrypoint.sh  docker-livecheck.sh  ml-gpu.yml  ml.yml  mongodb.yml  monitor.yml  prod.yml
docs/explanations/: db-migrations.md  predictions.md  triton.md
docs/how-to-guides/: robotoff-for-3rd-party-apps.md  test-and-debug.md
docs/introduction/: architecture.md  contributing.md
docs/references/: api.yml  batch-job.md  ingredients-spellcheck.md  package.md
elasticsearch/: Dockerfile  category_index.json
es/: category_index.json  create_index.sh  es_dump.py  index.json  match.py  predict.py  product_dump.py  product_index.json  requirements.txt  utils.py
explanations/category-prediction/: index.html
explanations/db-migrations/: index.html
i18n/: README.md  compile.sh  robotoff.pot
migrations/: 001_initial.py  002_add_bounding_box.py  003_add_logo_text_field.py  004_drop_indices.py  005_drop_other_indices.py  006_add_logo_annotation_server_type.py  007_add_logo_annotation_server_type_index.py  008_add_insight_lc.py  009_add_insight_with_image.py
ml/: Category analysis large scale All.ipynb  Category analysis large scale.ipynb  Category analysis.ipynb  analysis.py  categories.py  category_classifier.py  ml.py  predict_hierarchical.py  preprocessing.py  requirements.txt  train_hierarchical.py
models/: docker-compose.yml  manage.py  models.toml
receipe-estimator/: README.md  test.py
recipe_estimator/: README.md  __main__.py  test.py
references/: api.yml
research/: index.html
robotoff/: __main__.py  app.py  brands.py  categories.py  elasticsearch.py  health.py  images.py  ingredients.py  logo_label_type.py  logos.py  metrics.py  models.py  mongo.py  notifier.py  off.py  products.py  redis.py  scheduler.py  settings.py  slack.py  taxonomy.py  triton.py  types.py  utils.py  worker_thread.py
scripts/: annotate_cli.py  apply_insights.py  backup_postgres.sh  batch_annotate.py  category_dataset.py  clean_insights.py  doctext.py  extract_images.py  extract_location.py  extract_logo_annotations.py  extract_spellcheck.py  generate_ocr_insight.py  insert_image_predictions.py  insert_images.py  move_insights.py  ocr_dump.py  predict_cat_batch.py  refresh_insights.py  remove_duplicates.py  shuffle_split.py  wikidata.py
search/: search_index.json
templates/: home.html  index.html
tests/: conftest.py  data.py  test_annotation_vote.py  test_brands.py  test_ingredients.py  test_models.py  test_products.py  test_settings.py  test_slack.py  test_taxonomy.py
tf_models/: models.config
(+790 files in other folders)
