[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
data_file = ".cov/.coverage"
source = ["robotoff"]

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.isort] # From https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "robotoff"
version = "1.48.1"
description = "Real-time and batch prediction service for Open Food Facts."
authors = ["Open Food Facts Team"]
license = "GNU Affero General Public License v3"

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.31,<2.33"
peewee = "~3.17.6"
psycopg2-binary = "~2.9.1"
gunicorn = ">=20.1,<22.1"
falcon = "~3.1.3"
elasticsearch = "~8.5.3"
pymongo = ">=4.5,<4.7"
dacite = "~1.6.0"
influxdb-client = "~1.34.0"
jsonschema = "~4.4.0"
orjson = ">=3.8.2,<3.10.0"
Pillow = ">=9.3,<10.4"
numpy = "~1.26.4"
protobuf = "~3.19.0"
Pint = "0.22"
APScheduler = "~3.10.1"
more-itertools = "~8.9.0"
matplotlib = "~3.9.1"
typer = "~0.7.0"
py-healthcheck = "^1.10.1"
cachetools = "^5.2.0"
tritonclient = {extras = ["grpc"], version = "2.38.0"}
rq = "~1.11.1"
python-redis-lock = "~4.0.0"
transformers = ">=4.30.2,<4.39.0"
lark = "~1.1.4"
h5py = "~3.8.0"
opencv-contrib-python-headless = "~4.10.0.84"
toml = "~0.10.2"
openfoodfacts = "1.1.1"
imagehash = "~4.3.1"
peewee-migrate = "~1.12.2"
diskcache = "~5.6.3"

[tool.poetry.dependencies.sentry-sdk]
version = ">=1.14,<2.9"
extras = ["falcon"]

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "24.3.0"                                  # If upgrading black, be sure to also update black version in .github/workflows/autoblack.yml and in .pre-commit-config.yaml
factory_boy-peewee = "0.0.4"  # This package is archived and not maintained anymore but works and is very lightweight.
mypy = "1.10.1"
pytest = "~7.2.0"
pytest-mock = "~3.10.0"
pre-commit = "~2.20.0"
toml-sort = "~0.20.1"
isort = "~5.9.3"
flake8-bugbear = "~22.10.27"
flake8-github-actions = "~0.1.1"
pytest-cov = "~4.0.0"
mkdocs-material = "~7.2.3"
mdx-truly-sane-lists = "~1.2"
markdown = "~3.3"  # mdx-truly-sane-lists requires markdown < 3.4
mkdocs-awesome-pages-plugin = "~2.8.0"
coverage = { extras = ["toml"], version = "~6.3" }
types-requests = "~2.28.11.5"
types-six = "^1.16.10"
types-protobuf = "^3.17.3"
types-certifi = "^2021.10.8"
types-setuptools = "^65.6.0.0"
types-toml = "^0.10.3"
pytest-httpserver = "^1.0.4"
types-cachetools = "^5.2.1"
types-redis = "^4.3.21"
rq-dashboard = "~0.6.1"

[tool.poetry.group.dev.dependencies]
types-pytz = "^2024.1.0.20240417"

[tool.poetry.scripts]
robotoff-cli = 'robotoff.cli.main:main'
